# dev-danhenderson

./: .editorconfig  .gitignore  .pre-commit-config.yaml  DEV.md  Pipfile  README.md  cdk.json  deploy.py  docker-compose.yml  package-lock.json  package.json  requirements.txt
.github/workflows/: build.yml  tests.yml
aws-stack/: requirements.txt
aws-stack/aws_stack/: aws_stack_stack.py
backend/: .dockerignore  Dockerfile  Dockerfile.prod  Pipfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: logging.py  main.py  models.py  schemas.py
backend/app/api/: api.py  deps.py
backend/app/api/routes/: climbing.py  contact.py  images.py  leads.py  photo_gallary.py  photography.py  searches.py
backend/app/core/: conf.py  db.py  security.py
backend/app/tests/: conftest.py
backend/app/tests/unit/: abc_tests.py  test_chrome.py  test_leads.py  test_searches.py
cloudformation/: Dockerfile  app.py  pyproject.toml
frontend/: Dockerfile  Dockerfile.prod  README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  ThemeProvider.tsx  index.tsx  ticks.json
infrastructure/: Pipfile  README.md  app.py  pyproject.toml  requirements.txt  stack.py
infrastructure/infrastructure/: backend.py  data.py  frontend.py
public/: robots.txt  sitemap.xml
src/: App.tsx  ThemeProvider.tsx  WelcomeAudioProvider.tsx  index.tsx  photography.json
src/components/: Admin.tsx  AnimatedContentCard.tsx  BackgroundPaper.tsx  ContentCard.tsx  Header.tsx  LoadingBars.tsx  PhotoAlbum.tsx  ToolsAccordion.tsx  (+1 more)
(+55 files in other folders)
